--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -21,3 +21,35 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+
+  authentication:
+    build:
+      context: ./../authentication-service
+      dockerfile: ./../authentication-service/Dockerfile
+    restart: always
+    ports:
+      - "8082:8080"
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      DSN: "host=postgres port=5432 user=postgres  password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
+
+  postgres:
+    image: postgres:14.0
+    restart: always
+    ports:
+      - "5432:5432"
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=users
+    volumes:
+      - postgres:/var/lib/postgresql/data
+      - ./db-data/users.sql:/docker-entrypoint-initdb.d/init.sql
+
+volumes:
+  postgres:
