--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -51,5 +51,33 @@ services:
       - postgres:/var/lib/postgresql/data
       - ./db-data/users.sql:/docker-entrypoint-initdb.d/init.sql
 
+  logger:
+    build:
+      context: ./../logger-service
+      dockerfile: ./../logger-service/Dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      DSN: "host=postgres port=5432 user=postgres  password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
+
+  mongo:
+    image: mongo:4.2.16-bionic
+    restart: always
+    ports:
+      - "27017:27017"
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      MONGO_INITDB_DATABASE: logs
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - mongo:/data/db
+      - ./db-data/users.sql:/docker-entrypoint-initdb.d/init.sql
+
 volumes:
   postgres:
+  mongo:
