--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -59,9 +59,7 @@ services:
     deploy:
       mode: replicated
       replicas: 1
-    environment:
-      DSN: "host=postgres port=5432 user=postgres  password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
-
+    
   mongo:
     image: mongo:4.2.16-bionic
     restart: always
@@ -77,6 +75,30 @@ services:
     volumes:
       - mongo:/data/db
       - ./db-data/users.sql:/docker-entrypoint-initdb.d/init.sql
+
+  mailer:
+    build:
+      context: ./../mailer-service
+      dockerfile: ./../mailer-service/Dockerfile
+    restart: always
+    environment:
+      MAIL_DOMAIN: localhost
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_USERNAME: ""
+      MAIL_PASSWORD: ""
+      MAIL_ENCRYPTION: none
+      MAIL_FROM_NAME: "John Smith"
+      MAIL_FROM_ADDRESS: john.smith@example.com
+    deploy:
+      mode: replicated
+      replicas: 1
+  
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
 
 volumes:
   postgres:
