--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: |
-      echo ${{ secrets.TOKEN }} | docker login ghcr.io -u $ --password-stdin
+      echo ${{ secrets.TOKEN }} | docker login ghcr.io -u ${{github.actor}} --password-stdin
       docker build -t ghcr.io/nu12/go-microservices/${{ matrix.service }}:latest -f ghcr.io/nu12/go-microservices/${{ matrix.service }}/Dockerfile ./${{ matrix.service }}/
       docker push ghcr.io/nu12/go-microservices/${{ matrix.service }}:latest
 
