--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v3
     - run: |
         echo ${{ secrets.TOKEN }} | docker login ghcr.io -u ${{github.actor}} --password-stdin
-        docker build -t ghcr.io/nu12/go-microservices/${{ matrix.service }}:latest -f ghcr.io/nu12/go-microservices/${{ matrix.service }}/Dockerfile ./${{ matrix.service }}/
-        docker push ghcr.io/nu12/go-microservices/${{ matrix.service }}:latest
+        docker build -t ${{ matrix.service }}:latest -f ./${{ matrix.service }}/Dockerfile ./${{ matrix.service }}/
+        docker push ${{ matrix.service }}:latest
 
     
