Add GH Actions build

--- a/authentication-service/Dockerfile
+++ b/authentication-service/Dockerfile
@@ -7,6 +7,7 @@ COPY . .
 RUN go build -o authentication cmd/api/main.go cmd/api/routes.go cmd/api/handlers.go cmd/api/helpers.go
 
 FROM alpine:latest
+LABEL org.opencontainers.image.source https://github.com/nu12/go-microservices
 
 WORKDIR /app
 
