--- a/listener-service/Dockerfile
+++ b/listener-service/Dockerfile
@@ -7,6 +7,7 @@ COPY . .
 RUN go build -o listener main.go
 
 FROM alpine:latest 
+LABEL org.opencontainers.image.source https://github.com/nu12/go-microservices
 
 WORKDIR /app
 
