--- a/logger-service/Dockerfile
+++ b/logger-service/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . .
 
-RUN go build -o logger cmd/api/main.go cmd/api/routes.go cmd/api/handlers.go cmd/api/helpers.go cmd/api/rpc.go
+RUN go build -o logger cmd/api/main.go cmd/api/routes.go cmd/api/handlers.go cmd/api/helpers.go cmd/api/rpc.go cmd/api/grpc.go
 
 FROM alpine:latest
 LABEL org.opencontainers.image.source https://github.com/nu12/go-microservices
