--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -9,6 +9,9 @@ RUN go build -o front cmd/web/main.go
 FROM alpine:latest 
 LABEL org.opencontainers.image.source https://github.com/nu12/go-microservices
 
+ARG commit
+ENV COMMIT=${commit}
+
 WORKDIR /app
 
 COPY --from=builder /app/front /app/front
