--- a/broker-service/charts/broker-service/values.yaml
+++ b/broker-service/charts/broker-service/values.yaml
@@ -71,6 +71,16 @@ resources: {}
 env:
   - name: RABBITMQ_URL
     value: "amqp://guest:guest@go-rabbitmq"
+  - name: AUTHENTICATE_URL
+    value: "http://go-authentication:8080"
+  - name: LOGGER_URL
+    value: "http://go-logger:8080"
+  - name: LOGGER_RPC_URL
+    value: "go-logger:5001"
+  - name: LOGGER_GRPC_URL
+    value: "go-logger:50001"
+  - name: MAILER_URL
+    value: "http://go-mailer:8080"
 
 autoscaling:
   enabled: false
