--- a/authentication-service/charts/authentication-service/values.yaml
+++ b/authentication-service/charts/authentication-service/values.yaml
@@ -1,11 +1,11 @@
-# Default values for broker-service.
+# Default values for authentication-service.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: ghcr.io/nu12/broker-service
+  repository: ghcr.io/nu12/authentication-service
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -40,21 +40,11 @@ service:
   type: ClusterIP
   port: 8080
 
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+env:
+  - name: DSN
+    value: "host=go-postgres port=5432 user=postgres  password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
+  - name: LOGGER_URL
+    value: "http://go-logger-service:8080"
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -67,20 +57,6 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
-
-env:
-  - name: RABBITMQ_URL
-    value: "amqp://guest:guest@go-rabbitmq"
-  - name: AUTHENTICATE_URL
-    value: "http://go-authentication-service:8080"
-  - name: LOGGER_URL
-    value: "http://go-logger-service:8080"
-  - name: LOGGER_RPC_URL
-    value: "go-logger-service:5001"
-  - name: LOGGER_GRPC_URL
-    value: "go-logger-service:50001"
-  - name: MAILER_URL
-    value: "http://go-mailer-service:8080"
 
 autoscaling:
   enabled: false
