--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -8,6 +8,9 @@ services:
       args:
         - commit=dev
     restart: always
+    environment:
+      BACKEND_ADDRESS: "http://localhost:8081"
+      COMMIT: docker-compose
     ports:
       - "8080:8080"
     deploy:
