--- a/logger-service/charts/logger-service/templates/deployment.yaml
+++ b/logger-service/charts/logger-service/templates/deployment.yaml
@@ -46,13 +46,15 @@ spec:
               containerPort: {{ .Values.grpc.port }}
               protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /ping
-              port: http
+            exec:
+              command:
+              - cat
+              - /tmp/healthy
           readinessProbe:
-            httpGet:
-              path: /ping
-              port: http
+            exec:
+              command:
+              - cat
+              - /tmp/healthy
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
