--- a/logger-service/charts/logger-service/values.yaml
+++ b/logger-service/charts/logger-service/values.yaml
@@ -49,6 +49,8 @@ grpc:
   port: 50001
 
 env:
+  - name: RABBITMQ_URL
+    value: "amqp://guest:guest@go-rabbitmq"
   - name: MONGO_USER
     value: admin
   - name: MONGO_PASSWORD
