--- a/logger-service/charts/logger-service/templates/deployment.yaml
+++ b/logger-service/charts/logger-service/templates/deployment.yaml
@@ -49,12 +49,12 @@ spec:
             exec:
               command:
               - cat
-              - /tmp/healthy
+              - /tmp/readyz
           readinessProbe:
             exec:
               command:
               - cat
-              - /tmp/healthy
+              - /tmp/readyz
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
