--- a/mailer-service/charts/mailer-service/templates/deployment.yaml
+++ b/mailer-service/charts/mailer-service/templates/deployment.yaml
@@ -41,12 +41,12 @@ spec:
             exec:
               command:
               - cat
-              - /tmp/healthy
+              - /tmp/readyz
           readinessProbe:
             exec:
               command:
               - cat
-              - /tmp/healthy
+              - /tmp/readyz
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
