--- a/mailer-service/charts/mailer-service/values.yaml
+++ b/mailer-service/charts/mailer-service/values.yaml
@@ -39,6 +39,8 @@ service:
   port: 8080
 
 env:
+  - name: RABBITMQ_URL
+    value: "amqp://guest:guest@go-rabbitmq"
   - name: MAIL_DOMAIN
     value: "localhost"
   - name: MAIL_HOST
