--- a/logger-service/Dockerfile
+++ b/logger-service/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY . .
 
-RUN go build -o logger cmd/api/main.go cmd/api/routes.go cmd/api/handlers.go cmd/api/helpers.go cmd/api/rpc.go cmd/api/grpc.go
+RUN go build -o logger cmd/api/main.go  cmd/api/handlers.go 
 
 FROM alpine:latest
 LABEL org.opencontainers.image.source https://github.com/nu12/go-microservices
@@ -12,7 +12,5 @@ LABEL org.opencontainers.image.source https://github.com/nu12/go-microservices
 WORKDIR /app
 
 COPY --from=builder /app/logger /app/logger
-
-EXPOSE 8080
 
 ENTRYPOINT ["./logger"]
