--- a/logger-service/charts/logger-service/templates/deployment.yaml
+++ b/logger-service/charts/logger-service/templates/deployment.yaml
@@ -35,24 +35,16 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             {{- toYaml .Values.env | nindent 12 }}
-          ports:
-            - name: http
-              containerPort: {{ .Values.service.port }}
-              protocol: TCP
-            - name: rpc
-              containerPort: {{ .Values.rpc.port }}
-              protocol: TCP
-            - name: grpc
-              containerPort: {{ .Values.grpc.port }}
-              protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /ping
-              port: http
+            exec:
+              command:
+              - cat
+              - /tmp/readyz
           readinessProbe:
-            httpGet:
-              path: /ping
-              port: http
+            exec:
+              command:
+              - cat
+              - /tmp/readyz
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
